# python_design_patterns

./: .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  build_python.sh  pyproject.toml  requirements.txt
docs/: docs.html  documentation.html  home.html
