[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.black]
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''
line-length = 79
target-version = ["py39", "py310", "py311"]

[tool.flake8]
exclude = ".venv"
max-complexity = 10
max-line-length = 79

[tool.isort]
combine_as_imports = true
ensure_newline_before_comments = true
force_grid_wrap = 0
force_single_line = true
include_trailing_comma = true
line_length = 79
lines_after_imports = 2
lines_between_types = 2
multi_line_output = 3
profile = "black"
use_parentheses = true

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_defs = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
explicit_package_bases = true
follow_imports = "silent"
ignore_missing_imports = true
namespace_packages = true
no_implicit_reexport = true
show_error_codes = true
strict = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    'poetry.console.commands.self.show.plugins',
    'poetry.plugins.plugin_manager',
    'poetry.repositories.installed_repository',
    'poetry.utils.env',
]
warn_unused_ignores = true

[[tool.mypy.overrides]]
ignore_missing_imports = false
module = [
    'cachecontrol.*',
    'lockfile.*',
    'pexpect.*',
    'requests_toolbelt.*',
    'shellingham.*',
    'virtualenv.*',
    'xattr.*',
]

[tool.nbqa.mutate]
black = 1
flake8 = 1
isort = 1
mypy = 1

[tool.poe.tasks]
check_nb = """
nbqa
mypy 
src/notebooks/*
"""
check_py = """
mypy 
src/python/*
"""
clean = """
rm -rf 
./**/__pycache__/
.mypy_cache/
dist/
src/python/
"""
export = """
jupyter 
nbconvert 
src/notebooks/*.ipynb 
--to         python
--output-dir src/python/
"""
format_nb = """
nbqa
black 
src/notebooks/*
"""
format_py = """
black 
src/python/*
"""
lint_nb = """
nbqa
flake8 
src/notebooks/*
"""
lint_py = """
flake8 
src/python/*
"""
precommit = "pre-commit run --all-files"
sort_nb = """
nbqa
isort 
src/notebooks/*
"""
sort_py = """
isort 
src/python/*
"""

[tool.poetry]
authors = ["mmmason <mmmason.github@gmail.com>"]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python",
    "Topic :: Software Development :: Design Patterns",
]
description = "Set of notebooks of design patterns written in python"
documentation = "https://mmmason-github.github.io/python_design_patterns/docs"
homepage = "https://mmmason-github.github.io/python_design_patterns/home"
include = [
    { format = "sdist", path = ".editorconfig" },
    { format = "sdist", path = ".gitignore" },
    { format = "sdist", path = ".pre-commit-config.yaml" },
    { format = "sdist", path = ".vscode/" },
    { format = "sdist", path = "LICENSE.txt" },
    { format = "sdist", path = "README.md" },
    { format = "sdist", path = "docs/" },
    { format = "sdist", path = "pyproject.toml" },
]
keywords = ["data structures and algorithms", "python"]
license = "LICENSE.txt"
maintainers = ["mmmason <mmmason.github@gmail.com>"]
name = "src"
packages = [{ format = "sdist", include = "src/" }]
readme = "README.md"
repository = "https://github.com/mmmason-github/python_design_patterns/"
version = "0.1.0"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
jupyter-console = "^6.6.3"
jupyter-server = "^2.4.0"
jupyter-client = "^8.0.3"
jupyter-core = "^5.2.0"
jupyterlab = "^3.6.1"
jupyterlab-pygments = "^0.2.2"
jupyterlab-server = "^2.20.0"
jupyterlab-widgets = "^3.0.5"
pandas = "^1.5.3"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
nbqa = { extras = ["black", "flake8", "isort", "mypy"], version = "^1.6.3" }
poethepoet = "^0.18.1"
pre-commit = "^3.1.1"

[tool.poetry.group.typing.dependencies]
mypy = "^1.1.1"
pandas-stubs = "^1.5.3.230304"
pydantic = "^1.10.6"
typing-extensions = "^4.5.0"
